--- a/static/CSS/upload_completed.css
+++ b/static/CSS/upload_completed.css
@@ -1,8 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Exo+2:400,700,500,300);
+@import url(https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap);
 
 body {
   background: #ebeff2;
-  font-family: "Exo 2";
+  font-family: "Mitr", sans-serif;
+  font-size: 15px;
 }
 
 .zone {      
@@ -10,8 +11,8 @@ body {
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
   background: radial-gradient(ellipse at center,#03989E 0,#03989E 100%);
-  width:50%;
-  height:50%;  
+  width:60%;
+  height:60%;  
   border:5px dashed white;
   text-align:center;
   color: white;
