--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Upload</title>
+    <title>Human Age Estimation Through Panoramic Radiographs Images With Deep Neural Network</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/upload.css') }}">
-  </head>  
+  </head>
+  
+  <h1>
+    <center>     <br>    <br> 
+    Human Age Estimation Through Panoramic Radiographs Images With Deep Neural Network
+      </br> </br></center> 
+  </h1>
+
+
   <body>
   <div class= "zone">
-
     <br></br>
-
+     
     <h1>Image Upload</h1>
   <div id="dropZ">
 <img src="http://100dayscss.com/codepen/upload.svg" class="upload-icon" height="180"/>
