--- a/templates/upload_completed.html
+++ b/templates/upload_completed.html
@@ -10,7 +10,7 @@
   <body>
     <h1>ผลลัพธ์การคาดการณ์อายุคนจากภาพพาโนรามา</h1>
     <img src={{ url_for('static', filename='panoramic.jpg')}} height="250" alt="processed image">
-    <h2> อายุ   :  {{prediction1}} </h2>
+    <h2> อายุ   :  {{prediction1}} ปี </h2>
     <h2> เพศ   :  {{prediction2}} </h2> 
 
   </body>
