--- a/templates/upload_completed.html
+++ b/templates/upload_completed.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
+<style>
+  body::before {
+    content: "";
+    background-image: url('https://media.istockphoto.com/id/616008942/photo/dental-x-ray-of-teeth.jpg?s=612x612&w=0&k=20&c=Z6EJjGffMmUqpQBtQQnq_0x3i2dmBuCY52-Lt-1KX9Y=');
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    filter: blur(5px);
+    opacity: 0.7;
+  }
+</style>
+
+
 <html>
   <head>
     <title>Human Age Estimation Through Panoramic Radiographs Images With Deep Neural Network</title>
   </head>
-  <link rel="stylesheet" href="{{ url_for('static', filename='CSS/upload_completed.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='CSS/upload_completed_index.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='CSS/arrow_back.css') }}">
+
   <!-- <form class="form-horizontal" action="/submit" method="post2" enctype="multipart/form-data"> -->
+ 
 
   <div class= "zone">
   <body>
-    <h1>ผลลัพธ์การคาดการณ์อายุคนจากภาพพาโนรามา</h1>
+    <h1>ผลลัพธ์การคาดการณ์อายุคนจากภาพเอกซเรย์พาโนรามา</h1>
     <img src={{ url_for('static', filename='panoramic.jpg')}} height="250" alt="processed image">
     <h2> อายุ   :  {{prediction1}} ปี </h2>
     <h2> เพศ   :  {{prediction2}} </h2> 
 
-  </body>
-  </div>
-
-
+    <button type = "button" class="btn btn--purple" onclick="history.back()">
+        <span class="btn__txt">Back</span>
+        <i class="btn__bg" aria-hidden="true"></i>
+        <i class="btn__bg" aria-hidden="true"></i>
+        <i class="btn__bg" aria-hidden="true"></i>
+        <i class="btn__bg" aria-hidden="true"></i>
+     </button>
+      </body>
 </div>
 </html>
