--- a/templates/upload2.html
+++ b/templates/upload2.html
@@ -12,7 +12,7 @@
         bottom: 0;
         z-index: -1;
         filter: blur(5px);
-        opacity: 0.7;
+        opacity: 0.5;
       }
 </style>
 
@@ -27,11 +27,10 @@
   </head>
   
   <p class="popout">
-     <br>    <br>  
+     
     
-     &nbsp;&nbsp;  &nbsp; <span>Human</span>  <span>Age</span> <span>Through</span> <span>Panoramic</span> <span>Radiographs</span> <span>Images</span> <span>With</span> <span>Deep</span>   
-    <span>Neural</span>  <span>Network</span>   
-     </br> </br>
+     &nbsp;&nbsp;   <span>Human</span>  <span>Age</span> <span>Estimation</span> <span>Through</span> <span>Panoramic</span> <span>Radiographs</span> 
+     &nbsp;&nbsp;    &nbsp;&nbsp;    &nbsp;&nbsp;    &nbsp;&nbsp;    <span>Images</span> <span>With</span> <span>Deep</span>   <span>Neural</span>  <span>Network</span>   
     </p>
 
 
