--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -6,7 +6,8 @@
   .popout {
     font-family: Futura, sans-serif;
     font-weight: 900;
-    font-size: 30px;
+    font-size: 40px;
+    text-align: center;
     /* padding: 80px; */
   }
   @-webkit-keyframes ani {
