--- a/templates/test.html
+++ b/templates/test.html
@@ -1,22 +1,32 @@
-<!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html>
-  <head>
-    <title>Human Age Estimation Through Panoramic Radiographs Images With Deep Neural Network</title>
-  </head>
-  <link rel="stylesheet" href="{{ url_for('static', filename='CSS/upload_completed.css') }}">
-  <!-- <form class="form-horizontal" action="/submit" method="post2" enctype="multipart/form-data"> -->
+<head>
+	<title>ผลลัพธ์การคาดการณ์อายุคนจากภาพเอกซเรย์พาโนรามา</title>
+	<style>
+		table {
+			font-family: arial, sans-serif;
+			border-collapse: collapse;
+			width: 100%;
+		}
 
-  <div class= "zone">
-  <body>
-    <h1>ผลลัพธ์การคาดการณ์อายุคนจากภาพพาโนรามา</h1>
-    <img src={{ url_for('static', filename='panoramic.jpg')}} height="250" alt="processed image">
-    <h2> อายุ   :  {{prediction1}} ปี </h2>
-    <h2> เพศ   :  {{prediction2}} </h2> 
+		td, th {
+			border: 1px solid #dddddd;
+			text-align: left;
+			padding: 8px;
+		}
 
+		tr:nth-child(even) {
+			background-color: #dddddd;
+		}
+	</style>
+</head>
+<body>
+	<h1>ผลลัพธ์การคาดการณ์อายุคนจากภาพเอกซเรย์พาโนรามาของฟัน</h1>
+  
+	{{ table|safe }}
 
-  </body>
-  </div>
-
-
-</div>
+</body>
 </html>
+
+
