--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@1.2.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/maybe.js') }}">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='CSS/maybe.js') }}"> -->
 
 </head>
 <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
