--- a/static/CSS/arrow_back.css
+++ b/static/CSS/arrow_back.css
@@ -13,13 +13,15 @@ html, body {
     border-radius: 7px;
     cursor: pointer;
     color: black;
-    font: 900 1.05rem/1 "Nunito", sans-serif;
+    font-family:'Prompt', sans-serif;;
+    font-size : 16px ; 
     letter-spacing: 0.05em;
     overflow: hidden;
     padding: 1.15em 3.5em;
     min-height: 3.3em;
     position: relative;
     text-transform: lowercase;
+
   }
   .btn--yellow {
     --hue: 46;
